include/altdss/capi/dss.h

    ALTDSS_CAPI_DLL int32_t WireData_Get_Count(void);
    ALTDSS_CAPI_DLL int32_t WireData_Get_First(void);
    ALTDSS_CAPI_DLL int32_t WireData_Get_Next(void);
    ALTDSS_CAPI_DLL const char* WireData_Get_Name(void);
    ALTDSS_CAPI_DLL void WireData_Set_Name(const char* Value);
    ALTDSS_CAPI_DLL void WireData_Get_AllNames(char*** ResultPtr, int32_t* ResultDims);
    ALTDSS_CAPI_DLL double WireData_Get_Rdc(void);
    ALTDSS_CAPI_DLL void WireData_Set_Rdc(double Value);
    ALTDSS_CAPI_DLL double WireData_Get_Rac(void);
    ALTDSS_CAPI_DLL void WireData_Set_Rac(double Value);
    ALTDSS_CAPI_DLL double WireData_Get_GMRac(void);
    ALTDSS_CAPI_DLL void WireData_Set_GMRac(double Value);
    ALTDSS_CAPI_DLL int32_t WireData_Get_GMRUnits(void);
    ALTDSS_CAPI_DLL void WireData_Set_GMRUnits(int32_t Value);
    ALTDSS_CAPI_DLL double WireData_Get_Radius(void);
    ALTDSS_CAPI_DLL void WireData_Set_Radius(double Value);
    ALTDSS_CAPI_DLL int32_t WireData_Get_RadiusUnits(void);
    ALTDSS_CAPI_DLL void WireData_Set_RadiusUnits(int32_t Value);
    ALTDSS_CAPI_DLL int32_t WireData_Get_ResistanceUnits(void);
    ALTDSS_CAPI_DLL void WireData_Set_ResistanceUnits(int32_t Value);
    ALTDSS_CAPI_DLL double WireData_Get_Diameter(void);
    ALTDSS_CAPI_DLL void WireData_Set_Diameter(double Value);
    ALTDSS_CAPI_DLL double WireData_Get_NormAmps(void);
    ALTDSS_CAPI_DLL void WireData_Set_NormAmps(double Value);
    ALTDSS_CAPI_DLL double WireData_Get_EmergAmps(void);
    ALTDSS_CAPI_DLL void WireData_Set_EmergAmps(double Value);
    ALTDSS_CAPI_DLL double WireData_Get_CapRadius(void);
    ALTDSS_CAPI_DLL void WireData_Set_CapRadius(double Value);
    ALTDSS_CAPI_DLL int32_t WireData_Get_idx(void);
    ALTDSS_CAPI_DLL void WireData_Set_idx(int32_t Value);
    ALTDSS_CAPI_DLL void* WireData_Get_Pointer(void);